封装execute与enqueue